# Semantic

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DATABASE_SCHEMA.md  DBLP_Complete_Pipeline.md  Dockerfile  README.md  pyproject.toml  requirements.txt  start_stage2.sh  stop_stage2.sh  test.random.py
backup/: README.md  backup_table.py  example_usage.sh  restore_table.py
docker/: run_scripts.sh  scheduler.py  start.sh
scripts/: build_venue_mapping.py  create_venue_mapping_table.sql  datapaper-export.py  dataset_paper_update_key.py  full_import_pipeline.py  import_dataset_authors.py  import_dataset_papers.py  import_papers_stage1_all.py  import_papers_stage2_conferences.py  import_papers_stage3_author_papers.py  init_conferences_table.py  populate_venue_normalized.py  run_all_steps.py  run_author_processing_phase1.py  run_comprehensive_scheduler.py  run_dblp_service_once.py  run_pdf_download.py  run_pipeline_once.py  run_s2_enrichment.py  run_scheduler.py  setup_database.py  simple_data_processor.py  step1_create_authorships.py  step2_5_enrich_author_profiles_with_s2.py  step2_create_author_profiles.py  step2_create_s2_author_profiles.py  step3_calculate_metrics.py  step3_create_author_profiles.py  step3_create_final_table.py  step4_create_final_table.py  step4_enrich_author_profiles_with_s2.py  step4_generate_reports.py  step5_create_final_table.py  step5_generate_reports.py  step6_generate_reports.py  update_to_english.py
scripts/acl_anthology/: clean_acl_papers.py  get_ACL_papers.py  run_acl_pipeline.py  step3_preparation_mapping.py  (+1 more)
(+96 files in other folders)
