[project]
name = "dblp-semantic-processor"
version = "2.0.0"
description = "DBLP semantic data processing pipeline with scheduling and incremental updates"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "acl-anthology",
    "aiohttp>=3.12.15",
    "aiofiles>=24.1.0",
    "thefuzz>=0.22.1",
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "mmh3>=5.2.0",
    "psutil>=7.1.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pgvector>=0.3.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0", 
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
